--- a/hyperparams.yml
+++ b/hyperparams.yml
@@ -1,11 +1,10 @@
 default_run:
   model_name: roberta-base
-  # gpus: 2
-  # accelerator: ddp
-  # precision: 16
-  # sync_batchnorm: True
-  batch_size: 128
-  max_epochs: 60
-  lr: 0.00001
+  gpus: 1
+  precision: 16
+  batch_size: 64
+  max_epochs: 10
+  lr: 0.000005
   weight_decay: 0.01
+  val_check_interval: 0.25
   seed: 48
