--- a/hyperparams.yml
+++ b/hyperparams.yml
@@ -1,10 +1,20 @@
 default_run:
   model_name: roberta-base
   gpus: 1
-  precision: 16
-  batch_size: 64
-  max_epochs: 10
-  lr: 0.000005
-  weight_decay: 0.01
-  val_check_interval: 0.25
-  seed: 48
+  batch_size: 16
+  max_epochs: 4
+  lr: 0.00001
+  weight_decay: 1.0
+  val_check_interval: 5
+  gradient_clip_val: 0.5
+
+
+large_run:
+  model_name: roberta-large
+  gpus: 1
+  batch_size: 16
+  max_epochs: 4
+  lr: 0.00001
+  weight_decay: 1.0
+  val_check_interval: 5
+  gradient_clip_val: 0.5
