--- a/hyperparams.yml
+++ b/hyperparams.yml
@@ -3,10 +3,13 @@ default_run:
   gpus: 1
   batch_size: 16
   max_epochs: 4
-  lr: 0.00001
+  lr: 0.00005
   weight_decay: 1.0
   val_check_interval: 5
-  gradient_clip_val: 0.5
+  # gradient_clip_val: 0.5
+  # pretrained: True
+  eps: 1e-6
+  betas: !!python/tuple [0.9, 0.999]
 
 
 large_run:
