--- a/hyperparams.yml
+++ b/hyperparams.yml
@@ -1,5 +1,5 @@
 default_run:
-  model_name: roberta-base
+  model_name: deepset/roberta-base-squad2
   gpus: 1
   batch_size: 16
   max_epochs: 4
@@ -8,16 +8,21 @@ default_run:
   val_check_interval: 5
   # gradient_clip_val: 0.5
   # pretrained: True
-  eps: 1e-6
+  eps: 0.000001
   betas: !!python/tuple [0.9, 0.999]
+  kl_loss: False
 
 
 large_run:
-  model_name: roberta-large
+  model_name: deepset/roberta-large-squad2
   gpus: 1
   batch_size: 16
   max_epochs: 4
-  lr: 0.00001
+  lr: 0.00005
   weight_decay: 1.0
   val_check_interval: 5
-  gradient_clip_val: 0.5
+  # gradient_clip_val: 0.5
+  # pretrained: True
+  eps: 0.000001
+  betas: !!python/tuple [0.9, 0.999]
+  kl_loss: False
