--- a/hyperparams.yml
+++ b/hyperparams.yml
@@ -123,6 +123,18 @@ deberta_large:
   kl_loss: False
   swa: True
 
+  
+deberta_xlarge:
+  model_name: microsoft/deberta-v2-xlarge
+  gpus: [1]
+  batch_size: 6
+  max_epochs: 6
+  lr: 0.000025
+  weight_decay: 1.0
+  val_check_interval: 5
+  kl_loss: False
+  swa: True
+
 
 bart_base:
   model_name: facebook/bart-base
@@ -142,6 +154,30 @@ bart_large:
   batch_size: 12
   max_epochs: 6
   lr: 0.000025
+  weight_decay: 1.0
+  val_check_interval: 5
+  kl_loss: False
+  swa: True
+
+
+st_labse:
+  model_name: sentence-transformers/LaBSE
+  gpus: [1]
+  batch_size: 16
+  max_epochs: 6
+  lr: 0.00005
+  weight_decay: 1.0
+  val_check_interval: 5
+  kl_loss: False
+  swa: True
+
+
+st_bert:
+  model_name: sentence-transformers/bert-base-nli-cls-token
+  gpus: [0]
+  batch_size: 16
+  max_epochs: 6
+  lr: 0.00005
   weight_decay: 1.0
   val_check_interval: 5
   kl_loss: False
