--- a/hyperparams.yml
+++ b/hyperparams.yml
@@ -24,12 +24,23 @@ bigbird:
 
 
 roberta_large:
-  # model_name: deepset/roberta-large-squad2
   model_name: roberta-large
   gpus: [1]
   batch_size: 16
   max_epochs: 6
-  lr: 0.00005
+  lr: 0.000025
+  weight_decay: 1.0
+  val_check_interval: 5
+  kl_loss: False
+  swa: True
+
+
+roberta_large_squad:
+  model_name: deepset/roberta-large-squad2
+  gpus: [1]
+  batch_size: 16
+  max_epochs: 6
+  lr: 0.000025
   weight_decay: 1.0
   val_check_interval: 5
   kl_loss: False
@@ -128,7 +139,9 @@ deberta_large:
   
 deberta_xlarge:
   model_name: microsoft/deberta-v2-xlarge
-  gpus: [1]
+  gpus: 2
+  plugins: ddp_sharded
+  accelerator: ddp
   batch_size: 6
   max_epochs: 6
   lr: 0.000025
