--- a/hyperparams.yml
+++ b/hyperparams.yml
@@ -1,7 +1,7 @@
 roberta_base:
-  # model_name: deepset/roberta-base-squad2
+  model_name: deepset/roberta-base-squad2
   # model_name: roberta-base
-  model_name: xlm-roberta-base
+  # model_name: xlm-roberta-base
   gpus: [1]
   batch_size: 16
   max_epochs: 6
@@ -17,16 +17,16 @@ bigbird:
   gpus: 1
   batch_size: 16
   max_epochs: 6
-  lr: 0.00005
+  lr: 0.000025
   weight_decay: 1.0
   val_check_interval: 5
-  kl_loss: False
+  kl_loss: True
   swa: True
 
 
 roberta_large:
-  # model_name: roberta-large
-  model_name: xlm-roberta-large
+  model_name: roberta-large
+  # model_name: xlm-roberta-large
   gpus: [1]
   batch_size: 16
   max_epochs: 6
@@ -203,15 +203,16 @@ st_labse:
   swa: True
 
 
-st_bert:
-  model_name: sentence-transformers/bert-base-nli-cls-token
-  gpus: [0]
-  batch_size: 16
+# https://www.sbert.net/docs/pretrained_models.html
+st_paraphrase:
+  model_name: sentence-transformers/paraphrase-mpnet-base-v2
+  gpus: [1]
+  batch_size: 32
   max_epochs: 6
   lr: 0.00005
   weight_decay: 1.0
   val_check_interval: 5
-  kl_loss: False
+  kl_loss: True
   swa: True
 
 
